# rhizome

./: .dockerignore  .env.example  .gitignore  .rhizome_checkpoints  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  USAGE.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.context/retros/: 2026-04-06-1.json
.github/workflows/: docker-push.yml  test.yml
rhizome/: __init__.py  __main__.py  config.py
rhizome/api/: config.py  main.py
rhizome/cli/: __init__.py  main.py
rhizome/cli/commands/: ingest.py  migrate.py  traverse.py
rhizome/corpus/: __init__.py  chunker.py  wikipedia_ingester.py
rhizome/embedder/: __init__.py  base.py  factory.py  huggingface.py  openai.py
rhizome/k8s/: deployment.yml
rhizome/migrations/: add_domain_field.py
rhizome/stitching/: __init__.py  citation.py  formatter.py
rhizome/traversal/: __init__.py  config.py  engine.py
rhizome/vectorstore/: __init__.py  client.py  collection.py
rhizome/visualizer/app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
rhizome/visualizer/app/src/: App.jsx  index.css
rhizome/visualizer/app/src/components/: Controls.jsx  Graph.jsx  Legend.jsx  PathPanel.jsx  Sidebar.jsx
tests/: __init__.py  test_api.py  test_chunker.py  test_cli_ingest.py  test_cli_traverse.py  test_collection_manager.py  test_config.py  test_embedder.py  test_embedder_factory.py  test_openai_embedder.py  test_stitching.py  test_traversal.py  test_vectorstore_client.py  test_wikipedia_ingester.py
